hphp/test/zend/good/tests/classes/constants_error_006.php.expectf

Fatal error: Invalid lvalue in %s/constants_error_006.php on line 8
